; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_filter/extr_alphamask.c_LoadMask.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_filter/extr_alphamask.c_LoadMask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }

@VLC_CODEC_YUVA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i8*)* @LoadMask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LoadMask(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %5, align 8
  %12 = load i32, i32* @VLC_CODEC_YUVA, align 4
  %13 = call i32 @video_format_Init(i32* %7, i32 %12)
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call i32 @picture_Release(i64 %21)
  br label %23

23:                                               ; preds = %18, %2
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = call i32* @image_HandlerCreate(%struct.TYPE_5__* %24)
  store i32* %25, i32** %6, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = call i8* @vlc_path2uri(i8* %26, i32* null)
  store i8* %27, i8** %8, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = call i64 @image_ReadUrl(i32* %28, i8* %29, i32* %7)
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  store i64 %30, i64* %32, align 8
  %33 = load i8*, i8** %8, align 8
  %34 = call i32 @free(i8* %33)
  %35 = call i32 @video_format_Clean(i32* %7)
  %36 = load i32*, i32** %6, align 8
  %37 = call i32 @image_HandlerDelete(i32* %36)
  ret void
}

declare dso_local i32 @video_format_Init(i32*, i32) #1

declare dso_local i32 @picture_Release(i64) #1

declare dso_local i32* @image_HandlerCreate(%struct.TYPE_5__*) #1

declare dso_local i8* @vlc_path2uri(i8*, i32*) #1

declare dso_local i64 @image_ReadUrl(i32*, i8*, i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @video_format_Clean(i32*) #1

declare dso_local i32 @image_HandlerDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
